--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,101 +68,48 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
 
-      - name: Commit and push changes via GitHub API
+      - name: Create Release PR
         if: steps.semantic.outputs.new_release_published == 'true'
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ steps.app-token.outputs.token }}
-          script: |
-            const version = '${{ steps.semantic.outputs.new_release_version }}';
-            const fs = require('fs');
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+        run: |
+          VERSION="${{ steps.semantic.outputs.new_release_version }}"
+          BRANCH="release/v${VERSION}"
 
-            // Read updated files
-            const changelog = fs.readFileSync('CHANGELOG.md', 'utf8');
-            const pyproject = fs.readFileSync('pyproject.toml', 'utf8');
-            const initPy = fs.readFileSync('src/py_netatmo_truetemp/__init__.py', 'utf8');
+          echo "Creating release PR for version ${VERSION}"
 
-            // Get current commit SHA
-            const { data: ref } = await github.rest.git.getRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: 'heads/main'
-            });
-            const currentCommitSha = ref.object.sha;
+          # Create and checkout release branch
+          git checkout -b "${BRANCH}"
 
-            // Get current tree
-            const { data: commit } = await github.rest.git.getCommit({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              commit_sha: currentCommitSha
-            });
-            const baseTreeSha = commit.tree.sha;
+          # Add updated files
+          git add CHANGELOG.md pyproject.toml src/py_netatmo_truetemp/__init__.py
 
-            // Create blobs for updated files
-            const changelogBlob = await github.rest.git.createBlob({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              content: Buffer.from(changelog).toString('base64'),
-              encoding: 'base64'
-            });
+          # Commit changes
+          git commit -m "chore(release): ${VERSION} [skip ci]"
 
-            const pyprojectBlob = await github.rest.git.createBlob({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              content: Buffer.from(pyproject).toString('base64'),
-              encoding: 'base64'
-            });
+          # Push branch
+          git push origin "${BRANCH}"
 
-            const initPyBlob = await github.rest.git.createBlob({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              content: Buffer.from(initPy).toString('base64'),
-              encoding: 'base64'
-            });
+          # Create PR
+          PR_URL=$(gh pr create \
+            --title "chore(release): ${VERSION}" \
+            --body "Automated release PR for version ${VERSION}
 
-            // Create new tree
-            const { data: newTree } = await github.rest.git.createTree({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              base_tree: baseTreeSha,
-              tree: [
-                {
-                  path: 'CHANGELOG.md',
-                  mode: '100644',
-                  type: 'blob',
-                  sha: changelogBlob.data.sha
-                },
-                {
-                  path: 'pyproject.toml',
-                  mode: '100644',
-                  type: 'blob',
-                  sha: pyprojectBlob.data.sha
-                },
-                {
-                  path: 'src/py_netatmo_truetemp/__init__.py',
-                  mode: '100644',
-                  type: 'blob',
-                  sha: initPyBlob.data.sha
-                }
-              ]
-            });
+          ## Changes
+          - Updated CHANGELOG.md
+          - Updated version in pyproject.toml to ${VERSION}
+          - Updated version in __init__.py to ${VERSION}
 
-            // Create commit
-            const { data: newCommit } = await github.rest.git.createCommit({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              message: `chore(release): ${version} [skip ci]`,
-              tree: newTree.sha,
-              parents: [currentCommitSha]
-            });
+          This PR was automatically created by the release workflow." \
+            --base main \
+            --head "${BRANCH}")
 
-            // Update main branch reference
-            await github.rest.git.updateRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: 'heads/main',
-              sha: newCommit.sha,
-              force: false
-            });
+          echo "Created PR: ${PR_URL}"
 
-            console.log(`✓ Committed and pushed: ${newCommit.sha}`)
+          # Extract PR number from URL
+          PR_NUMBER=$(echo "${PR_URL}" | grep -oP '\d+$')
+
+          # Auto-merge the PR
+          gh pr merge "${PR_NUMBER}" --squash --auto
+
+          echo "✓ Release PR created and set to auto-merge"
