--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
 permissions:
   contents: write
   id-token: write
+  pull-requests: write
 
 jobs:
   release:
@@ -68,48 +69,151 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
 
-      - name: Create Release PR
+      - name: Create Verified Release Commit and PR
         if: steps.semantic.outputs.new_release_published == 'true'
-        env:
-          GH_TOKEN: ${{ steps.app-token.outputs.token }}
-        run: |
-          VERSION="${{ steps.semantic.outputs.new_release_version }}"
-          BRANCH="release/v${VERSION}"
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ steps.app-token.outputs.token }}
+          script: |
+            const version = '${{ steps.semantic.outputs.new_release_version }}';
+            const fs = require('fs');
+            const branchName = `release/v${version}`;
 
-          echo "Creating release PR for version ${VERSION}"
+            console.log(`Creating release PR for version ${version}`);
 
-          # Create and checkout release branch
-          git checkout -b "${BRANCH}"
+            // Read updated files
+            const changelog = fs.readFileSync('CHANGELOG.md', 'utf8');
+            const pyproject = fs.readFileSync('pyproject.toml', 'utf8');
+            const initPy = fs.readFileSync('src/py_netatmo_truetemp/__init__.py', 'utf8');
 
-          # Add updated files
-          git add CHANGELOG.md pyproject.toml src/py_netatmo_truetemp/__init__.py
+            // Get main branch commit
+            const { data: mainRef } = await github.rest.git.getRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'heads/main'
+            });
+            const mainSha = mainRef.object.sha;
 
-          # Commit changes
-          git commit -m "chore(release): ${VERSION} [skip ci]"
+            // Get base tree
+            const { data: mainCommit } = await github.rest.git.getCommit({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              commit_sha: mainSha
+            });
 
-          # Push branch
-          git push origin "${BRANCH}"
+            // Create blobs for updated files in parallel
+            const [changelogBlob, pyprojectBlob, initPyBlob] = await Promise.all([
+              github.rest.git.createBlob({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                content: Buffer.from(changelog).toString('base64'),
+                encoding: 'base64'
+              }),
+              github.rest.git.createBlob({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                content: Buffer.from(pyproject).toString('base64'),
+                encoding: 'base64'
+              }),
+              github.rest.git.createBlob({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                content: Buffer.from(initPy).toString('base64'),
+                encoding: 'base64'
+              })
+            ]);
 
-          # Create PR
-          PR_URL=$(gh pr create \
-            --title "chore(release): ${VERSION}" \
-            --body "Automated release PR for version ${VERSION}
+            // Create new tree
+            const { data: newTree } = await github.rest.git.createTree({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              base_tree: mainCommit.tree.sha,
+              tree: [
+                { path: 'CHANGELOG.md', mode: '100644', type: 'blob', sha: changelogBlob.data.sha },
+                { path: 'pyproject.toml', mode: '100644', type: 'blob', sha: pyprojectBlob.data.sha },
+                { path: 'src/py_netatmo_truetemp/__init__.py', mode: '100644', type: 'blob', sha: initPyBlob.data.sha }
+              ]
+            });
 
-          ## Changes
-          - Updated CHANGELOG.md
-          - Updated version in pyproject.toml to ${VERSION}
-          - Updated version in __init__.py to ${VERSION}
+            // Create verified commit via GitHub API
+            const { data: newCommit } = await github.rest.git.createCommit({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              message: `chore(release): ${version} [skip ci]\n\n🤖 Generated with semantic-release`,
+              tree: newTree.sha,
+              parents: [mainSha]
+            });
 
-          This PR was automatically created by the release workflow." \
-            --base main \
-            --head "${BRANCH}")
+            console.log(`✓ Created verified commit: ${newCommit.sha}`);
 
-          echo "Created PR: ${PR_URL}"
+            // Delete branch if it exists (cleanup from previous failed runs)
+            try {
+              await github.rest.git.deleteRef({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                ref: `heads/${branchName}`
+              });
+              console.log(`✓ Deleted existing branch: ${branchName}`);
+            } catch (error) {
+              // Branch doesn't exist, that's fine
+            }
 
-          # Extract PR number from URL
-          PR_NUMBER=$(echo "${PR_URL}" | grep -oP '\d+$')
+            // Create release branch
+            await github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: `refs/heads/${branchName}`,
+              sha: newCommit.sha
+            });
 
-          # Auto-merge the PR
-          gh pr merge "${PR_NUMBER}" --squash --auto
+            console.log(`✓ Created branch: ${branchName}`);
 
-          echo "✓ Release PR created and set to auto-merge"
+            // Check if PR already exists
+            const { data: existingPRs } = await github.rest.pulls.list({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              head: `${context.repo.owner}:${branchName}`,
+              base: 'main',
+              state: 'open'
+            });
+
+            let pr;
+            if (existingPRs.length > 0) {
+              pr = existingPRs[0];
+              console.log(`✓ Found existing PR #${pr.number}: ${pr.html_url}`);
+            } else {
+              // Create PR
+              const { data: newPR } = await github.rest.pulls.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: `chore(release): ${version}`,
+                head: branchName,
+                base: 'main',
+                body: `Automated release PR for version ${version}\n\n## Changes\n- Updated CHANGELOG.md\n- Updated version in pyproject.toml to ${version}\n- Updated version in __init__.py to ${version}\n\n**Note**: This commit is verified by GitHub (created via API).\n\nThis PR was automatically created by the release workflow.`
+              });
+              pr = newPR;
+              console.log(`✓ Created PR #${pr.number}: ${pr.html_url}`);
+            }
+
+            // Enable auto-merge via GraphQL
+            const mutation = `
+              mutation($prId: ID!) {
+                enablePullRequestAutoMerge(input: {pullRequestId: $prId, mergeMethod: SQUASH}) {
+                  pullRequest {
+                    autoMergeRequest {
+                      enabledAt
+                    }
+                  }
+                }
+              }
+            `;
+
+            try {
+              await github.graphql(mutation, { prId: pr.node_id });
+              console.log('✓ Auto-merge enabled');
+            } catch (error) {
+              console.log(`⚠ Could not enable auto-merge: ${error.message}`);
+              console.log('You may need to merge the PR manually');
+            }
+
+            console.log(`\n✓ Release PR ready: ${pr.html_url}`)
