--- a/.releaserc.json
+++ b/.releaserc.json
@@ -43,13 +43,7 @@
         }
       }
     ],
-    [
-      "@semantic-release/changelog",
-      {
-        "changelogFile": "CHANGELOG.md",
-        "changelogTitle": "# Changelog\n\nAll notable changes to this project will be documented in this file.\n\nThe format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),\nand this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html)."
-      }
-    ],
+    "@semantic-release/changelog",
     [
       "@semantic-release/exec",
       {
@@ -57,13 +51,12 @@
       }
     ],
     [
-      "@semantic-release/github",
+      "@semantic-release/git",
       {
-        "successComment": false,
-        "failComment": false,
-        "labels": ["release"],
-        "releasedLabels": ["released"]
+        "assets": ["CHANGELOG.md", "pyproject.toml", "src/py_netatmo_truetemp/__init__.py"],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
-    ]
+    ],
+    "@semantic-release/github"
   ]
 }
