--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,10 +61,6 @@ jobs:
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
         with:
-          extra_plugins: |
-            @semantic-release/changelog
-            @semantic-release/exec
-            @semantic-release/git
-            conventional-changelog-conventionalcommits
+          extra_plugins: conventional-changelog-conventionalcommits
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
