--- a/.releaserc.json
+++ b/.releaserc.json
@@ -53,7 +53,8 @@
       "@semantic-release/git",
       {
         "assets": ["CHANGELOG.md"],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
+        "author": false
       }
     ],
     "@semantic-release/github"
