--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,9 +27,20 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
-      - name: Get GitHub App User ID
-        id: get-user-id
-        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+      - name: Set Git Bot Identity
+        id: git-bot
+        run: |
+          # Get GitHub App details
+          APP_SLUG="${{ steps.app-token.outputs.app-slug }}"
+          USER_ID=$(gh api "/users/${APP_SLUG}[bot]" --jq .id)
+
+          # Construct bot identity
+          BOT_NAME="${APP_SLUG}[bot]"
+          BOT_EMAIL="${USER_ID}+${APP_SLUG}[bot]@users.noreply.github.com"
+
+          # Export for use in subsequent steps
+          echo "name=${BOT_NAME}" >> "$GITHUB_OUTPUT"
+          echo "email=${BOT_EMAIL}" >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
 
@@ -43,8 +54,13 @@ jobs:
           persist-credentials: false
       - name: Configure git for GitHub App
         run: |
-          git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
-          git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
+          # Set git identity from bot outputs
+          BOT_NAME="${{ steps.git-bot.outputs.name }}"
+          BOT_EMAIL="${{ steps.git-bot.outputs.email }}"
+
+          # Configure global git identity
+          git config --global user.name "${BOT_NAME}"
+          git config --global user.email "${BOT_EMAIL}"
 
       - name: Set up Python 3.13
         uses: actions/setup-python@v6
@@ -73,4 +89,12 @@ jobs:
             @semantic-release/git
             conventional-changelog-conventionalcommits
         env:
+          # GitHub authentication
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+
+          # Git author identity (official semantic-release env vars)
+          # See: https://github.com/semantic-release/semantic-release/blob/master/docs/usage/configuration.md#git-environment-variables
+          GIT_AUTHOR_NAME: ${{ steps.git-bot.outputs.name }}
+          GIT_AUTHOR_EMAIL: ${{ steps.git-bot.outputs.email }}
+          GIT_COMMITTER_NAME: ${{ steps.git-bot.outputs.name }}
+          GIT_COMMITTER_EMAIL: ${{ steps.git-bot.outputs.email }}
