--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,50 +90,6 @@ jobs:
           name: codecov-umbrella
           fail_ci_if_error: false
 
-  examples-checks:
-    name: Examples Checks
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Set up Python 3.13
-        uses: actions/setup-python@v6
-        with:
-          python-version: "3.13"
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v7
-        with:
-          enable-cache: true
-          cache-dependency-glob: "examples/uv.lock"
-
-      - name: Install library dependencies (root)
-        run: uv sync --frozen
-
-      - name: Install examples dependencies
-        working-directory: examples
-        run: uv sync --all-extras
-
-      - name: Run ruff format check on examples
-        working-directory: examples
-        run: uv run ruff format --check .
-
-      - name: Run ruff linting on examples
-        working-directory: examples
-        run: uv run ruff check .
-
-      - name: Run examples tests with coverage
-        working-directory: examples
-        run: uv run pytest tests/ -v --cov=. --cov-report=term-missing --cov-report=xml
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./examples/coverage.xml
-          flags: examples
-
   security:
     name: Security Scan
     runs-on: ubuntu-latest
@@ -207,14 +163,13 @@ jobs:
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
-    needs: [quick-checks, library-test, examples-checks, security, build]
+    needs: [quick-checks, library-test, security, build]
     if: always()
     steps:
       - name: Check all jobs status
         run: |
           if [[ "${{ needs.quick-checks.result }}" != "success" ]] || \
              [[ "${{ needs.library-test.result }}" != "success" ]] || \
-             [[ "${{ needs.examples-checks.result }}" != "success" ]] || \
              [[ "${{ needs.security.result }}" != "success" ]] || \
              [[ "${{ needs.build.result }}" != "success" ]]; then
             echo "❌ One or more jobs failed"
