--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dev = [
     "pytest-cov>=6.0.0",
     "pytest-mock>=3.15.1",
     "pytest>=9.0.2",
+    "responses>=0.25.0",
     "ruff>=0.14.5",
     "twine>=6.0.0",
     "types-requests>=2.32.4.20250913",
